Ensure default package is initialized if set during archetype choices, improve robustness on module construction.